--- a/trivial/index.html
+++ b/trivial/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/components/quest.js"></script>
+ 
+    <script type="module" src="./router/router.js"></script>
+    <script type="module" src="./router/routes.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
